# cv

./: .gitignore  CLAUDE.md  README.md  start.bat  start.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  auth.py  health.py  users.py
backend/app/core/: __init__.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  users.py
backend/app/schemas/: __init__.py  auth.py
backend/fastapi_vue_login_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/sql/postgresql/: 00_create_database.sql  01_init_schema.sql  README.md
backend/tests/: test_auth.py
frontend/: index.html  package-lock.json  package.json
frontend/scripts/: verify.mjs
frontend/src/: styles.css
frontend/src/auth/: session.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js
frontend/src/views/: DashboardView.vue  LoginView.vue
openspec/changes/add-postgresql-user-repository/: design.md  proposal.md  tasks.md
openspec/changes/add-postgresql-user-schema/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-initialize-git-main-commit/: design.md  tasks.md
openspec/changes/initialize-git-main-commit/: proposal.md
openspec/specs/backend-code-documentation/: spec.md
openspec/specs/database-adapter-boundary/: spec.md
openspec/specs/repository-version-control/: spec.md
openspec/specs/user-authentication/: spec.md
openspec/specs/web-application-shell/: spec.md
(+15 files in other folders)
